# jungfernstieg

./: .gitignore  Cargo.toml  Dockerfile  README.md  analysis.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt  rust-toolchain.toml
crates/biological/: Cargo.toml
crates/biological/src/: lib.rs  neural_networks.rs
crates/flux-dynamics/: Cargo.toml
crates/flux-dynamics/src/: circulation_optimizer.rs  grand_flux.rs  hierarchical_precision.rs  lib.rs  local_violations.rs  oscillatory_lagrangian.rs  pattern_alignment.rs  unified_integration.rs
crates/jungfernstieg-core/: Cargo.toml
crates/jungfernstieg-core/src/: config.rs  coordinator.rs  error.rs  lib.rs  system.rs  types.rs
crates/oscillatory-vm/: Cargo.toml
crates/oscillatory-vm/src/: coordination.rs  heart.rs  lib.rs  s_entropy_bank.rs
crates/s-entropy/: Cargo.toml
crates/s-entropy/src/: lib.rs
crates/s-entropy/src/coordinates/: mod.rs  stella_constant.rs
crates/s-entropy/src/navigation/: mod.rs
crates/virtual-blood/: Cargo.toml
crates/virtual-blood/src/: bmd_orchestration.rs  circulation.rs  composition.rs  filtration.rs  immune_interface.rs  immune_interface_new.rs  lib.rs  memory_learning.rs  monitoring.rs  oxygen_transport.rs  s_entropy.rs  vessels.rs
docs/: autonomous.tex  blood-vessel.aux  blood-vessel.out  bmd-injection.md  buhera.md  consiousness-processing.md  digital-preservation.md  divine-intervention-proof-s-entropy.tex  jungfernstieg-ftl-integration.md  jungfernstieg.aux  jungfernstieg.out  mufakose-gps.tex  musical-consciousness.tex  oscillatory-reality-ftl-framework.tex  pharmaceutical-consciousness.tex  structure.md  system_explanation.md  visual-consciousness.tex
docs/fundamental/: divine-necessity-mathematical-proof.aux  divine-necessity-mathematical-proof.bbl  divine-necessity-mathematical-proof.blg  divine-necessity-mathematical-proof.out  divine-necessity-mathematical-proof.tex  ftl.tex  references.bib
docs/vatican-submission/: buhera-conclave.aux  buhera-conclave.blg  buhera-conclave.out  buhera-conclave.toc  buhera.md  compile-documents.bat  compile-documents.sh  cover-letter.aux  cover-letter.blg  cover-letter.tex  email-template.md  executive-summary.aux  executive-summary.blg  executive-summary.out  executive-summary.tex  miracle-based-mathematics.aux  miracle-based-mathematics.blg  miracle-based-mathematics.out  miracle-based-mathematics.tex  references.bib  sigil.md  st-stellas-doctrine.aux  st-stellas-doctrine.blg  st-stellas-doctrine.out  st-stellas-doctrine.tex  st-stellas-doctrine.toc
src/jungfernstieg/: __init__.py  cli.py
src/jungfernstieg/biological/: __init__.py
src/jungfernstieg/consciousness/: __init__.py
src/jungfernstieg/monitoring/: __init__.py
src/jungfernstieg/oscillatory_vm/: __init__.py
src/jungfernstieg/safety/: __init__.py
src/jungfernstieg/sensors/: __init__.py
src/jungfernstieg/virtual_blood/: __init__.py
tests/: __init__.py  test_safety.py
