[package]
name = "oscillatory-vm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Oscillatory Virtual Machine functioning as S-Entropy Central Bank for biological-virtual systems"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
log = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Numerical computation for oscillatory calculations
nalgebra = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }

# Time handling for rhythm coordination
chrono = { workspace = true }

# Monitoring
metrics = { workspace = true }

# UUIDs
uuid = { workspace = true }

# Workspace dependencies
jungfernstieg-core = { path = "../jungfernstieg-core" }
virtual-blood = { path = "../virtual-blood" }
flux-dynamics = { path = "../flux-dynamics" }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"

[features]
default = []
# S-entropy economic coordination features
s-entropy-economics = []
# Advanced oscillatory coordination
advanced-oscillations = []
# Heart rhythm monitoring
heart-monitoring = []
