[package]
name = "virtual-blood"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
description = "Virtual Blood circulatory system for biological-virtual neural symbiosis"
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
log = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Numerical computation for S-entropy
nalgebra = { workspace = true }
ndarray = { workspace = true }
num-traits = { workspace = true }
num-complex = { workspace = true }

# Time handling
chrono = { workspace = true }

# Monitoring
metrics = { workspace = true }

# UUIDs for component identification
uuid = { workspace = true }

# Workspace dependencies
jungfernstieg-core = { path = "../jungfernstieg-core" }
flux-dynamics = { path = "../flux-dynamics" }

[dev-dependencies]
proptest = { workspace = true }
tokio-test = "0.4"

[features]
default = []
# BSL-2+ safety features for biological operations
biological-safety = []
# Hardware interface integration
hardware-integration = []
# Advanced monitoring and diagnostics
advanced-monitoring = []
